integration-test/compiler-plugin/src/testData/test/diagnostics/Duplicates.kt

val <!REDECLARATION!>test<!>: Int = 4

val <!REDECLARATION!>test<!>: Int = 2